--- a/package.json
+++ b/package.json
@@ -7,11 +7,11 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "prettier": "prettier --write src/**/*.{ts,scss,html}"
+    "prettier:check": "prettier --config .prettierrc --check \"src/**/*.{ts,css,html}\""
   },
   "husky": {
     "hooks": {
-      "pre-commit": "npm run prettier --staged && ng lint && npm test",
+      "pre-commit": "npm run prettier:check",
       "pre-push": "ng build --aot true"
     }
   },
@@ -46,6 +46,7 @@
     "karma-coverage": "~2.1.0",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
+    "lint-staged": "^13.0.0",
     "prettier": "^2.6.2",
     "tslint-config-prettier": "^1.18.0",
     "typescript": "~4.6.2"
